Facebook login integration

--- a/LifeLevel/Info.plist
+++ b/LifeLevel/Info.plist
@@ -24,6 +24,26 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>fb271962502989672</string>
+            </array>
+        </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>271962502989672</string>
+    <key>FacebookDisplayName</key>
+    <string>LifeLevelDemo</string>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>fbapi</string>
+        <string>fb-messenger-api</string>
+        <string>fbauth2</string>
+        <string>fbshareextension</string>
+    </array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
